# system-design-for-genai-talk

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
01 - indexing/: indexing.py
02 - query/: query.py
