[project]
name = "system-design-for-genai-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langfuse>=2.56.1",
    "openai>=1.57.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.3",
    "qdrant-client>=1.12.1",
    "tqdm>=4.67.1",
]
